--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:theme="@style/Theme.DiceRoller"
         tools:targetApi="31">
         <activity
+            android:name=".menu"
+            android:exported="false"
+            android:label="@string/title_activity_menu"
+            android:theme="@style/Theme.DiceRoller" />
+        <activity
             android:name=".location"
             android:exported="false" />
         <activity
